<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.AuthFragment">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/certification_number_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="input_certification_number_view, confirm_certification_number_view" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/phone_auth_toolbar_view"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/auth_toolbar_title_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/phone_auth_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/phone_auth_title_view_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_auth_toolbar_view" />

        <EditText
            android:id="@+id/input_phone_number_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_rectangle_8dp_gray"
            android:hint="@string/input_phone_number_view_hint_text"
            android:inputType="phone"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_auth_title_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/request_certification_number_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_disable_button"
            android:stateListAnimator="@null"
            android:text="@string/request_certification_number_view_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_phone_number_view" />

        <EditText
            android:id="@+id/input_certification_number_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_rectangle_8dp_gray"
            android:hint="@string/input_certification_number_view_hint_text"
            android:inputType="numberDecimal"
            android:paddingStart="12dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/request_certification_number_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_certification_number_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_disable_button"
            android:stateListAnimator="@null"
            android:text="@string/confirm_certification_number_view_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_certification_number_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>